Fixed scroll and layout issues

--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -27,3 +27,10 @@
         height: 3rem;
     }
 }
+
+@media (max-width: 400px) {
+    .header {
+        justify-content: left;
+        padding-left: 1rem;
+    }
+}
